--- a/resources/fxml/LoginWindow.fxml
+++ b/resources/fxml/LoginWindow.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.LoginController">
    <left>
@@ -40,4 +40,37 @@
          </padding>
       </VBox>
    </right>
+   <top>
+      <HBox alignment="TOP_RIGHT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="600.0" styleClass="taskbar">
+         <children>
+            <Button maxHeight="25.0" minHeight="25.0" mnemonicParsing="false" styleClass="login-button">
+               <graphic>
+                  <ImageView fitHeight="5.0" fitWidth="12.0">
+                     <image>
+                        <Image url="@../icon/Minimise.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button maxHeight="25.0" minHeight="25.0" mnemonicParsing="false" styleClass="login-button">
+               <graphic>
+                  <ImageView fitHeight="15.0" fitWidth="12.0">
+                     <image>
+                        <Image url="@../icon/Resize-Fullscreen.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button maxHeight="25.0" minHeight="25.0" mnemonicParsing="false" styleClass="close-button">
+               <graphic>
+                  <ImageView fitHeight="15.0" fitWidth="12.0">
+                     <image>
+                        <Image url="@../icon/Close.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </HBox>
+   </top>
 </BorderPane>
