--- a/resources/fxml/AddUserWindow.fxml
+++ b/resources/fxml/AddUserWindow.fxml
@@ -8,9 +8,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" styleClass="inputwindow" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="inputwindow" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER_LEFT" maxHeight="10.0" maxWidth="150.0" minHeight="575.0" minWidth="150.0" prefHeight="575.0" prefWidth="150.0">
+      <Label styleClass="window-title" text="Add User" />
+      <VBox alignment="CENTER_LEFT" maxHeight="10.0" maxWidth="150.0" minHeight="500.0" minWidth="150.0" prefHeight="500.0" prefWidth="150.0">
          <children>
             <Label text="First name:" />
             <TextField maxWidth="150.0" minWidth="150.0">
@@ -50,4 +51,7 @@
          </children>
       </VBox>
    </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
