--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -56,7 +57,10 @@
                   </ImageView>
                </graphic>
             </Button>
-         </children></VBox>
+         </children>
+         <padding>
+            <Insets top="10.0" />
+         </padding></VBox>
    </left>
    <top>
       <HBox fx:id="hboxTopBar" alignment="TOP_RIGHT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="900.0" styleClass="title-bar">
