--- a/resources/fxml/CalendarWindow.fxml
+++ b/resources/fxml/CalendarWindow.fxml
@@ -8,18 +8,18 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.CalendarController">
+
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
-            <Button mnemonicParsing="false" text="&lt;" />
+            <Button mnemonicParsing="false" onAction="#OnClickLeftMonth" text="&lt;" />
             <Label styleClass="window-title" text="This" />
             <Label fx:id="lblMonth" styleClass="window-title" text="March" />
-            <Button mnemonicParsing="false" text="&gt;" />
+            <Button mnemonicParsing="false" onAction="#OnClickRightMonth" text="&gt;" />
          </children>
          <VBox.margin>
             <Insets />
@@ -38,8 +38,11 @@
                   <Label text="Sunday" />
                </children>
             </HBox>
-            <FlowPane fx:id="fpCalendar" layoutY="23.0" prefHeight="441.0" prefWidth="733.0" />
+            <FlowPane fx:id="fpCalendar" hgap="10.0" layoutX="15.0" layoutY="29.0" prefHeight="425.0" prefWidth="710.0" vgap="5.0" />
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </Pane>
    </children>
 </VBox>
