--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -12,7 +12,7 @@
    <left>
       <VBox prefHeight="600.0" prefWidth="125.0" spacing="15.0" styleClass="side-menu-bar" BorderPane.alignment="CENTER_LEFT">
          <children>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openHomeWindow" prefWidth="125.0" styleClass="side-menu-button" text="Home">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openHomeWindow" prefWidth="125.0" text="Home">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
@@ -21,7 +21,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openAddUserWindow" prefWidth="125.0" styleClass="side-menu-button" text="Add User">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openAddUserWindow" prefWidth="125.0" text="Add User">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
@@ -30,7 +30,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openManageUserWindow" prefWidth="125.0" styleClass="side-menu-button" text="Manage User">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openManageUserWindow" prefWidth="125.0" text="Manage User">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
@@ -39,7 +39,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openCalendarWindow" prefWidth="125.0" styleClass="side-menu-button" text="Calendar">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openCalendarWindow" prefWidth="125.0" text="Calendar">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
@@ -48,11 +48,23 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0" styleClass="side-menu-button" text="Profile">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0"  text="Profile">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
                         <Image url="@../icon/Administrator.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <VBox.margin>
+                  <Insets bottom="275.0" />
+               </VBox.margin>
+            </Button>
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Logout">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0">
+                     <image>
+                        <Image url="@../icon/Logout.png" />
                      </image>
                   </ImageView>
                </graphic>
