--- a/resources/fxml/pages/HomeWindow.fxml
+++ b/resources/fxml/pages/HomeWindow.fxml
@@ -12,21 +12,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.HomeController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.HomeController">
    <children>
-      <Label text="Upcoming Event's" />
-      <ScrollPane prefHeight="75.0" vbarPolicy="NEVER">
-         <content>
-            <HBox />
-         </content>
-      </ScrollPane>
+      <Label styleClass="window-title" text="Home" />
+      <VBox prefHeight="90.0" prefWidth="734.0">
+         <children>
+            <Label text="Upcoming Event's" />
+            <ScrollPane prefHeight="75.0" vbarPolicy="NEVER">
+               <content>
+                  <HBox />
+               </content>
+            </ScrollPane>
+         </children>
+      </VBox>
       <HBox prefHeight="25.0" spacing="20.0">
          <children>
             <Button mnemonicParsing="false" text="Add new event">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
-                        <Image url="@../icon/AddEvent.png" />
+                        <Image url="@../../icon/AddEvent.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -35,7 +40,7 @@
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
-                        <Image url="@../icon/Delete.png" />
+                        <Image url="@../../icon/Delete.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -44,7 +49,7 @@
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
-                        <Image url="@../icon/Update.png" />
+                        <Image url="@../../icon/Update.png" />
                      </image>
                   </ImageView>
                </graphic>
