--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -48,7 +48,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0"  text="Profile">
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0" text="Profile">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
@@ -75,7 +75,12 @@
          </padding></VBox>
    </left>
    <top>
-      <HBox fx:id="hboxTopBar" alignment="TOP_RIGHT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="900.0" styleClass="title-bar">
+      <HBox fx:id="hBoxTopBar" alignment="TOP_RIGHT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="900.0" styleClass="title-bar">
+         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icon/CuteOtter.png" />
+            </image>
+         </ImageView>
          <Button focusTraversable="false" maxHeight="24.0" minHeight="24.0" mnemonicParsing="false" onAction="#minimizeButton" styleClass="minimize-button">
             <graphic>
                <ImageView fitHeight="5.0" fitWidth="12.0">
@@ -84,6 +89,9 @@
                   </image>
                </ImageView>
             </graphic>
+            <HBox.margin>
+               <Insets left="815.0" />
+            </HBox.margin>
          </Button>
          <Button focusTraversable="false" maxHeight="24.0" minHeight="24.0" mnemonicParsing="false" onAction="#closeButton" styleClass="close-button">
             <graphic>
