--- a/resources/fxml/pages/HomeWindow.fxml
+++ b/resources/fxml/pages/HomeWindow.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.HomeController">
+<VBox fx:id="window" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" spacing="10.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.HomeController">
    <children>
       <Label styleClass="window-title" text="Home" />
       <VBox prefHeight="90.0" prefWidth="734.0">
@@ -27,7 +27,7 @@
       </VBox>
       <HBox prefHeight="25.0" spacing="20.0">
          <children>
-            <Button mnemonicParsing="false" text="Add new event">
+            <Button mnemonicParsing="false" onAction="#openEventWindow" text="Add new event">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
                      <image>
