--- a/resources/fxml/LoginWindow.fxml
+++ b/resources/fxml/LoginWindow.fxml
@@ -16,12 +16,15 @@
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="307.0" fitWidth="300.0" layoutY="47.0">
+            <ImageView fitWidth="307.0" layoutY="133.0">
                <image>
-                  <Image url="@../icon/CuteOtter.png" />
+                  <Image url="@../icon/Easvhvid.png" />
                </image>
             </ImageView>
          </children>
+         <BorderPane.margin>
+            <Insets left="20.0" />
+         </BorderPane.margin>
       </AnchorPane>
    </left>
    <right>
