--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -48,6 +48,18 @@
                   </ImageView>
                </graphic>
             </Button>
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openEventsWindow" prefWidth="125.0" text="Events">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0">
+                     <image>
+                        <Image url="@../icon/Administrator.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
             <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0" text="Profile">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
@@ -57,7 +69,7 @@
                   </ImageView>
                </graphic>
                <VBox.margin>
-                  <Insets bottom="275.0" />
+                  <Insets bottom="240.0" />
                </VBox.margin>
             </Button>
             <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Logout">
