--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -51,6 +51,15 @@
                   <Insets />
                </VBox.margin>
             </Button>
+            <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openStatisticsWindow" prefWidth="125.0" text="Statistics">
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icon/Chart(Black).png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
             <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openProfileWindow" prefWidth="125.0" text="Profile">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0">
@@ -60,7 +69,7 @@
                   </ImageView>
                </graphic>
                <VBox.margin>
-                  <Insets bottom="280.0" />
+                  <Insets bottom="240.0" />
                </VBox.margin>
             </Button>
             <Button alignment="TOP_LEFT" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Logout">
