--- a/resources/fxml/EventCreationWindow.fxml
+++ b/resources/fxml/EventCreationWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="window" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.EventCreationController">
+<VBox fx:id="window" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.EventCreationController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="1.0" prefWidth="775.0">
          <children>
@@ -33,7 +33,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="125.0">
                      <children>
                         <Label text="Event name:" />
-                        <TextField maxWidth="200.0" minWidth="200.0" />
+                        <TextField fx:id="txtEventName" maxWidth="200.0" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -55,7 +55,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="125.0">
                      <children>
                         <Label text="Available tickets:" />
-                        <TextField maxWidth="200.0" minWidth="200.0" />
+                        <TextField fx:id="txtAvailableTickets" maxWidth="200.0" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -64,7 +64,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="116.0">
                      <children>
                         <Label text="Event location:" />
-                        <TextField maxWidth="200.0" minWidth="200.0" />
+                        <TextField fx:id="txtEventLocation" maxWidth="200.0" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -77,7 +77,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="125.0">
                      <children>
                         <Label text="Event start at:" />
-                        <DatePicker minWidth="200.0" />
+                        <DatePicker fx:id="dpEventStart" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -86,7 +86,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="116.0">
                      <children>
                         <Label text="Event end at:" />
-                        <DatePicker minWidth="200.0" />
+                        <DatePicker fx:id="dpEventEnd" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -99,7 +99,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="125.0">
                      <children>
                         <Label text="Event start time:" />
-                        <TextField maxWidth="200.0" minWidth="200.0" />
+                        <TextField fx:id="txtEventStartTime" maxWidth="200.0" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -108,7 +108,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="116.0">
                      <children>
                         <Label text="Event end time:" />
-                        <TextField maxWidth="200.0" minWidth="200.0" />
+                        <TextField fx:id="txtEventEndTime" maxWidth="200.0" minWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -121,7 +121,7 @@
                   <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="125.0">
                      <children>
                         <Label text="Event description" />
-                        <TextArea minWidth="625.0" prefHeight="200.0" prefWidth="200.0" />
+                        <TextArea fx:id="txtxaEventDescription" minWidth="625.0" prefHeight="200.0" prefWidth="200.0" />
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -132,7 +132,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </HBox>
-            <Button mnemonicParsing="false" text="Create">
+            <Button mnemonicParsing="false" onAction="#createEvent" text="Create">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
