--- a/resources/fxml/pages/EventsWindow.fxml
+++ b/resources/fxml/pages/EventsWindow.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.EventsController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="775.0" styleClass="input-window" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GUI.Controller.Pages.EventsController">
    <children>
-      <TableView fx:id="tblEvents" prefHeight="438.0" prefWidth="600.0">
+      <TableView fx:id="tblEvents" prefHeight="404.0" prefWidth="775.0" VBox.vgrow="NEVER">
         <columns>
           <TableColumn fx:id="colName" prefWidth="75.0" text="Name" />
           <TableColumn fx:id="colTickets" prefWidth="75.0" text="Tickets" />
