--- a/resources/fxml/AdminWindow.fxml
+++ b/resources/fxml/AdminWindow.fxml
@@ -42,7 +42,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openUpdateWindow" prefHeight="35.0" prefWidth="125.0" text="Update">
+            <Button alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openUpdateWindow" prefHeight="35.0" prefWidth="125.0" text="Updates">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                      <image>
